objects/Customer_Satisfaction_Survey__c.object
<CustomObject><fields>
        <fullName>Comments__c</fullName>
        <description>Free-form comments from the customer</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Satisfaction__c</fullName>
        <description>The customer’s overall satisfaction level</description>
        <label>Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfied</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Improvement</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Results from customer surverys</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Customer Satisfaction Survery</label><nameField>
        <label>Customer Satisfaction Survery Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Customer Satisfaction Surveys</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>